--- a/islandwood.html
+++ b/islandwood.html
@@ -1,11 +1,11 @@
 <div style="width: 1728px; height: 17627px; position: relative; background: white; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
   <img style="width: 1728px; height: 670px; left: 0px; top: 0px; position: absolute" src="https://via.placeholder.com/1728x670" />
   <div style="width: 1728px; height: 670px; left: 0px; top: 0px; position: absolute">
-    <div style="left: 75px; top: 35px; position: absolute; color: white; font-size: 20px; font-family: Epilogue; font-weight: 600; line-height: 27px; word-wrap: break-word">KATIE HANCOCK</div>
-    <div style="left: 1581px; top: 35px; position: absolute; color: white; font-size: 17px; font-family: Epilogue; font-weight: 400; line-height: 27px; word-wrap: break-word">Resume</div>
-    <div style="left: 1506px; top: 35px; position: absolute; color: white; font-size: 17px; font-family: Epilogue; font-weight: 400; line-height: 27px; word-wrap: break-word">About</div>
-    <div style="left: 1409px; top: 35px; position: absolute; color: white; font-size: 17px; font-family: Epilogue; font-weight: 400; line-height: 27px; word-wrap: break-word">Archived</div>
-    <div style="left: 1341px; top: 35px; position: absolute; color: white; font-size: 17px; font-family: Epilogue; font-weight: 600; line-height: 27px; word-wrap: break-word">Work</div>
+    <div style="left: 75px; top: 35px; position: absolute; color: white; font-size: 20px; font-family: Epilogue; font-weight: 600; line-height: 27px; word-wrap: break-word"><a href="index.html">KATIE HANCOCK</a></div>
+    <div style="left: 1581px; top: 35px; position: absolute; color: white; font-size: 17px; font-family: Epilogue; font-weight: 400; line-height: 27px; word-wrap: break-word"><a href="resume.html">Resume</a></div>
+    <div style="left: 1506px; top: 35px; position: absolute; color: white; font-size: 17px; font-family: Epilogue; font-weight: 400; line-height: 27px; word-wrap: break-word"><a href="about.html">About</a></div>
+    <div style="left: 1409px; top: 35px; position: absolute; color: white; font-size: 17px; font-family: Epilogue; font-weight: 400; line-height: 27px; word-wrap: break-word"><a href="archived.html">Archived</a></div>
+    <div style="left: 1341px; top: 35px; position: absolute; color: white; font-size: 17px; font-family: Epilogue; font-weight: 600; line-height: 27px; word-wrap: break-word"><a href="index.html">Work</a></div>
   </div>
   <div style="width: 1728px; height: 98px; left: 0px; top: 17529px; position: absolute">
     <div style="left: 82px; top: 35px; position: absolute; color: rgba(0, 0, 0, 0.62); font-size: 20px; font-family: Epilogue; font-weight: 400; line-height: 27px; word-wrap: break-word">© Designed and Developed by Katie Hancock</div>
@@ -99,3 +99,10 @@
   <div style="left: 655px; top: 14587px; position: absolute; text-align: center; color: black; font-size: 24px; font-family: Epilogue; font-style: italic; font-weight: 500; line-height: 50px; word-wrap: break-word">Screen 3: Education Programs Page</div>
   <div style="width: 566px; left: 586px; top: 15755px; position: absolute; text-align: center; color: black; font-size: 24px; font-family: Epilogue; font-style: italic; font-weight: 500; line-height: 40px; word-wrap: break-word">Screen 4: Community Waters Science Unit Page</div>
 </div>
+
+<style>
+  a {
+    color: unset;
+    text-decoration: unset;
+  }
+</style>
