--- a/resume.html
+++ b/resume.html
@@ -1,11 +1,11 @@
 <div class="div">
   <div class="div-2">
-    <div class="div-3">KATIE HANCOCK</div>
+    <div class="div-3"><a href="index.html">KATIE HANCOCK</a></div>
     <div class="div-4">
-      <div class="div-5">Work</div>
-      <div class="div-6">Archived</div>
-      <div class="div-7">About</div>
-      <div class="div-8">Resume</div>
+      <div class="div-5"><a href="index.html">Work</a></div>
+      <div class="div-6"><a href="archived.html">Archived</a></div>
+      <div class="div-7"><a href="about.html">About</a></div>
+      <div class="div-8"><a href="resume.html">Resume</a></div>
     </div>
   </div>
   <div class="div-9">Katie Hancock</div>
@@ -250,7 +250,7 @@
   .div-9 {
     color: var(--Black, #2d2d2d);
     white-space: nowrap;
-    margin: 63px 0 0 295px;
+    margin: 63px 0 0 200px;
     font: 600 32px/131% Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -262,7 +262,7 @@
   .div-10 {
     color: #1565c0;
     white-space: nowrap;
-    margin: 58px 0 0 295px;
+    margin: 58px 0 0 200px;
     font: 500 20px/100% Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -273,8 +273,8 @@
   }
   .div-11 {
     color: #000;
-    align-self: center;
-    margin-top: 23px;
+    /*align-self: center;*/
+    margin: 23px 0 0 200px;
     font: 500 20px/20px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -285,7 +285,7 @@
   .div-12 {
     color: #000;
     white-space: nowrap;
-    margin: 9px 0 0 295px;
+    margin: 9px 0 0 200px;
     font: 500 20px/20px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -296,8 +296,8 @@
   }
   .div-13 {
     color: #000;
-    align-self: center;
-    margin-top: 24px;
+    /*align-self: center;*/
+    margin: 24px 0 0 200px;
     font: 400 20px/30px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -308,7 +308,7 @@
   .div-14 {
     color: #000;
     white-space: nowrap;
-    margin: 34px 0 0 295px;
+    margin: 34px 0 0 200px;
     font: 500 20px/20px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -320,7 +320,7 @@
   .div-15 {
     color: #000;
     white-space: nowrap;
-    margin: 9px 0 0 295px;
+    margin: 9px 0 0 200px;
     font: 500 20px/20px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -331,8 +331,8 @@
   }
   .div-16 {
     color: #000;
-    align-self: center;
-    margin-top: 24px;
+    /*align-self: center;*/
+    margin: 24px 0 0 200px;
     font: 400 20px/30px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -343,7 +343,7 @@
   .div-17 {
     color: #1565c0;
     white-space: nowrap;
-    margin: 55px 0 0 295px;
+    margin: 55px 0 0 200px;
     font: 500 20px/100% Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -354,7 +354,7 @@
   }
   .div-18 {
     color: #000;
-    margin: 23px 0 0 295px;
+    margin: 23px 0 0 200px;
     font: 600 20px/100% Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -365,7 +365,7 @@
   .div-19 {
     color: #000;
     white-space: nowrap;
-    margin: 14px 0 0 295px;
+    margin: 14px 0 0 200px;
     font: 500 20px/20px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -376,9 +376,9 @@
   }
   .div-20 {
     color: #000;
-    align-self: center;
-    margin-top: 24px;
-    width: 1029px;
+    /*align-self: center;*/
+    margin: 24px 0 0 200px;
+    width: 950px;
     font: 400 20px/30px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -388,7 +388,7 @@
   }
   .div-21 {
     color: #000;
-    margin: 34px 0 0 295px;
+    margin: 34px 0 0 200px;
     font: 600 20px/100% Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -399,7 +399,7 @@
   .div-22 {
     color: #000;
     white-space: nowrap;
-    margin: 14px 0 0 295px;
+    margin: 14px 0 0 200px;
     font: 500 20px/20px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -410,9 +410,9 @@
   }
   .div-23 {
     color: #000;
-    align-self: center;
-    margin-top: 24px;
-    width: 1038px;
+    /*align-self: center;*/
+    margin: 24px 0 0 200px;
+    width: 950px;
     font: 400 20px/30px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -422,7 +422,7 @@
   }
   .div-24 {
     color: #000;
-    margin: 34px 0 0 295px;
+    margin: 34px 0 0 200px;
     font: 600 20px/100% Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -433,7 +433,7 @@
   .div-25 {
     color: #000;
     white-space: nowrap;
-    margin: 14px 0 0 295px;
+    margin: 14px 0 0 200px;
     font: 500 20px/20px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -444,9 +444,9 @@
   }
   .div-26 {
     color: #000;
-    align-self: center;
-    margin-top: 24px;
-    width: 1025px;
+    /*align-self: center;*/
+    margin: 24px 0 0 200px;
+    width: 950px;
     font: 400 20px/30px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -457,7 +457,7 @@
   .div-27 {
     color: #000;
     white-space: nowrap;
-    margin: 34px 0 0 295px;
+    margin: 34px 0 0 200px;
     font: 600 20px/100% Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -469,7 +469,7 @@
   .div-28 {
     color: #000;
     white-space: nowrap;
-    margin: 14px 0 0 295px;
+    margin: 14px 0 0 200px;
     font: 500 20px/20px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -480,9 +480,9 @@
   }
   .div-29 {
     color: #000;
-    align-self: center;
-    margin-top: 24px;
-    width: 1025px;
+    /*align-self: center;*/
+    margin: 24px 0 0 200px;
+    width: 950px;
     font: 400 20px/30px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -492,7 +492,7 @@
   }
   .div-30 {
     color: #1565c0;
-    margin: 41px 0 0 295px;
+    margin: 41px 0 0 200px;
     font: 500 20px/100% Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -502,7 +502,7 @@
   }
   .div-31 {
     color: #000;
-    margin: 28px 0 0 295px;
+    margin: 28px 0 0 200px;
     font: 600 20px/30px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -512,7 +512,7 @@
   }
   .div-32 {
     color: #1565c0;
-    margin: 40px 0 0 295px;
+    margin: 40px 0 0 200px;
     font: 500 20px/100% Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -522,8 +522,8 @@
   }
   .div-33 {
     color: #000;
-    align-self: center;
-    margin-top: 23px;
+    /*align-self: center;*/
+    margin: 23px 0 0 200px;
     font: 600 20px/20px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -533,7 +533,7 @@
   }
   .div-34 {
     color: #000;
-    margin: 19px 0 0 295px;
+    margin: 19px 0 0 200px;
     font: 600 20px/20px Epilogue, sans-serif;
   }
   @media (max-width: 991px) {
@@ -725,5 +725,9 @@
     object-fit: auto;
     object-position: center;
     width: 50px;
+  }
+  a {
+    color: unset;
+    text-decoration: unset;
   }
 </style>
