--- a/safechat.html
+++ b/safechat.html
@@ -510,11 +510,18 @@
   </div>
   <div style="width: 1728px; height: 670px; left: 0px; top: 0px; position: absolute">
     <img style="width: 1728px; height: 670px; left: 0px; top: 0px; position: absolute" src="https://via.placeholder.com/1728x670" />
-    <div style="left: 75px; top: 35px; position: absolute; color: white; font-size: 20px; font-family: Epilogue; font-weight: 600; line-height: 27px; word-wrap: break-word">KATIE HANCOCK</div>
-    <div style="left: 1581px; top: 35px; position: absolute; color: black; font-size: 17px; font-family: Epilogue; font-weight: 400; line-height: 27px; word-wrap: break-word">Resume</div>
-    <div style="left: 1506px; top: 35px; position: absolute; color: black; font-size: 17px; font-family: Epilogue; font-weight: 400; line-height: 27px; word-wrap: break-word">About</div>
-    <div style="left: 1409px; top: 35px; position: absolute; color: black; font-size: 17px; font-family: Epilogue; font-weight: 400; line-height: 27px; word-wrap: break-word">Archived</div>
-    <div style="left: 1341px; top: 35px; position: absolute; color: black; font-size: 17px; font-family: Epilogue; font-weight: 600; line-height: 27px; word-wrap: break-word">Work</div>
+    <div style="left: 75px; top: 35px; position: absolute; color: white; font-size: 20px; font-family: Epilogue; font-weight: 600; line-height: 27px; word-wrap: break-word"><a href="index.html">KATIE HANCOCK</a></div>
+    <div style="left: 1581px; top: 35px; position: absolute; color: black; font-size: 17px; font-family: Epilogue; font-weight: 400; line-height: 27px; word-wrap: break-word"><a href="resume.html">Resume</a></div>
+    <div style="left: 1506px; top: 35px; position: absolute; color: black; font-size: 17px; font-family: Epilogue; font-weight: 400; line-height: 27px; word-wrap: break-word"><a href="about.html">About</a></div>
+    <div style="left: 1409px; top: 35px; position: absolute; color: black; font-size: 17px; font-family: Epilogue; font-weight: 400; line-height: 27px; word-wrap: break-word"><a href="archived.html">Archived</a></div>
+    <div style="left: 1341px; top: 35px; position: absolute; color: black; font-size: 17px; font-family: Epilogue; font-weight: 600; line-height: 27px; word-wrap: break-word"><a href="index.html">Work</a></div>
   </div>
   <div style="left: 425px; top: 7902px; position: absolute; color: #1565C0; font-size: 32px; font-family: Epilogue; font-weight: 500; line-height: 50px; word-wrap: break-word">INTERFACE SKETCHES</div>
 </div>
+
+<style>
+  a {
+    color: unset;
+    text-decoration: unset;
+  }
+</style>
