--- a/capstone.html
+++ b/capstone.html
@@ -1,12 +1,12 @@
 <div class="div">
   <div class="div-2">
     <div class="div-3">
-      <div class="div-4">KATIE HANCOCK</div>
+      <div class="div-4"><a href="index.html">KATIE HANCOCK</a></div>
       <div class="div-5">
-        <div class="div-6">Work</div>
-        <div class="div-7">Archived</div>
-        <div class="div-8">About</div>
-        <div class="div-9">Resume</div>
+        <div class="div-6"><a href="index.html">Work</a></div>
+        <div class="div-7"><a href="archived.html">Archived</a></div>
+        <div class="div-8"><a href="about.html">About</a></div>
+        <div class="div-9"><a href="resume.html">Resume</a></div>
       </div>
     </div>
     <img
@@ -288,11 +288,13 @@
           srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/afd7668f1589eb19acd5ba1d4a1a63d3536cc5f6584357948d99a94bb54f8bee?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/afd7668f1589eb19acd5ba1d4a1a63d3536cc5f6584357948d99a94bb54f8bee?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/afd7668f1589eb19acd5ba1d4a1a63d3536cc5f6584357948d99a94bb54f8bee?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/afd7668f1589eb19acd5ba1d4a1a63d3536cc5f6584357948d99a94bb54f8bee?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/afd7668f1589eb19acd5ba1d4a1a63d3536cc5f6584357948d99a94bb54f8bee?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/afd7668f1589eb19acd5ba1d4a1a63d3536cc5f6584357948d99a94bb54f8bee?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/afd7668f1589eb19acd5ba1d4a1a63d3536cc5f6584357948d99a94bb54f8bee?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/afd7668f1589eb19acd5ba1d4a1a63d3536cc5f6584357948d99a94bb54f8bee?apiKey=e0e370d878974b25a6e3d058316b06d7&"
           class="img-16"
         />
-        <img
-          loading="lazy"
-          srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&"
-          class="img-17"
-        />
+        <a href="https://www.linkedin.com/in/katiexhancock/" target="_blank">
+          <img
+            loading="lazy"
+            srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/757294552fa8647d0415832b6a4a8b9f5321cca4bfcdd8f3e0c73082f32c73c7?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+            class="img-17"
+          />
+        </a>
         <img
           loading="lazy"
           srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/10f9568f3c97ff40b9215c3d0b1db3fd7c99741338b3712581048e88bc3cd9ab?apiKey=e0e370d878974b25a6e3d058316b06d7&"
@@ -1344,5 +1346,9 @@
     object-fit: auto;
     object-position: center;
     width: 50px;
+  }
+  a {
+    color: unset;
+    text-decoration: unset;
   }
 </style>
