--- a/itinero.html
+++ b/itinero.html
@@ -1,12 +1,12 @@
 <div class="div">
   <div class="div-2">
     <div class="div-3">
-      <div class="div-4">KATIE HANCOCK</div>
+      <div class="div-4"><a href="index.html">KATIE HANCOCK</a></div>
       <div class="div-5">
-        <div class="div-6">Work</div>
-        <div class="div-7">Archived</div>
-        <div class="div-8">About</div>
-        <div class="div-9">Resume</div>
+        <div class="div-6"><a href="index.html">Work</a></div>
+        <div class="div-7"><a href="archived.html">Archived</a></div>
+        <div class="div-8"><a href="about.html">About</a></div>
+        <div class="div-9"><a href="resume.html">Resume</a></div>
       </div>
     </div>
     <div class="div-10">
@@ -1519,4 +1519,9 @@
     object-position: center;
     width: 50px;
   }
+  a {
+    color: unset;
+    text-decoration: unset;
+  }
+
 </style>
