working on fixing formatting for safechat page

--- a/about.html
+++ b/about.html
@@ -1,3 +1,6 @@
+<head>
+  <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100;300;400&display=swap" rel="stylesheet">
+</head>
 <div class="div">
   <div class="div-2">
     <div class="div-3">KATIE HANCOCK</div>
@@ -51,27 +54,33 @@
   <div class="div-14">
     <div class="div-15">
       <div class="column-3">
-        <img
-          loading="lazy"
-          srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&"
-          class="img-3"
-        />
+        <a href="safechat.html">
+          <img
+            loading="lazy"
+            srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/f56b428e3c2f88b1fc41aa5decb1e745f21d4d04b7fd3525e8915f63f7a13a9d?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+            class="img-3"
+          />
+        </a>
       </div>
       <div class="column-4">
-        <img
-          loading="lazy"
-          srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&"
-          class="img-4"
-        />
+        <a href="capstone.html">
+          <img
+            loading="lazy"
+            srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/a0b2ddb55bbc6ecab38f6257ecf7264d9affa6f57e4408473d081d558957400f?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+            class="img-4"
+          />
+        </a>
       </div>
       <div class="column-5">
-        <img
-          loading="lazy"
-          srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&"
-          class="img-5"
-        />
+        <a href="islandwood.html">
+          <img
+            loading="lazy"
+            srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/fd4b45b40b1db3de66ec973233b61e5d961b093d9db02c10563f8d2074a58f88?apiKey=e0e370d878974b25a6e3d058316b06d7&"
+            class="img-5"
+          />
+        </a>
       </div>
-      <div class="column-6"><div class="div-16"></div></div>
+      <div class="column-6"><div class="div-16"><a href="itinero.html"></a></div></div>
     </div>
   </div>
   <div class="div-17">
