--- a/capstone.html
+++ b/capstone.html
@@ -1,3 +1,6 @@
+<head>
+  <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100;300;400&display=swap" rel="stylesheet">
+</head>
 <div class="div">
   <div class="div-2">
     <div class="div-3">
