--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<head>
+  <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100;300;400&display=swap" rel="stylesheet">
+</head>
 <div class="div">
   <div class="div-2">
     <div class="div-3"><a href="index.html">KATIE HANCOCK</a></div>
@@ -26,7 +29,7 @@
                   class="img"
                 />
               </a>
-              <a href="safechat.html">
+              <a href="itinero.html">
                 <img
                   loading="lazy"
                   srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/eb57e3035408349b53cb3f789d4ed6553e1b5dcb9c95ac130dc39b0e00753df3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/eb57e3035408349b53cb3f789d4ed6553e1b5dcb9c95ac130dc39b0e00753df3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/eb57e3035408349b53cb3f789d4ed6553e1b5dcb9c95ac130dc39b0e00753df3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/eb57e3035408349b53cb3f789d4ed6553e1b5dcb9c95ac130dc39b0e00753df3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/eb57e3035408349b53cb3f789d4ed6553e1b5dcb9c95ac130dc39b0e00753df3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/eb57e3035408349b53cb3f789d4ed6553e1b5dcb9c95ac130dc39b0e00753df3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/eb57e3035408349b53cb3f789d4ed6553e1b5dcb9c95ac130dc39b0e00753df3?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/eb57e3035408349b53cb3f789d4ed6553e1b5dcb9c95ac130dc39b0e00753df3?apiKey=e0e370d878974b25a6e3d058316b06d7&"
@@ -40,7 +43,7 @@
       </div>
       <div class="column-2">
         <div class="div-17">
-          <a href="itinero.html">
+          <a href="safechat.html">
             <img
               loading="lazy"
               srcset="https://cdn.builder.io/api/v1/image/assets/TEMP/1c73736a4b2b89d3949a024bd07cd9ebffa68b9030f91553f1f198595439cf53?apiKey=e0e370d878974b25a6e3d058316b06d7&width=100 100w, https://cdn.builder.io/api/v1/image/assets/TEMP/1c73736a4b2b89d3949a024bd07cd9ebffa68b9030f91553f1f198595439cf53?apiKey=e0e370d878974b25a6e3d058316b06d7&width=200 200w, https://cdn.builder.io/api/v1/image/assets/TEMP/1c73736a4b2b89d3949a024bd07cd9ebffa68b9030f91553f1f198595439cf53?apiKey=e0e370d878974b25a6e3d058316b06d7&width=400 400w, https://cdn.builder.io/api/v1/image/assets/TEMP/1c73736a4b2b89d3949a024bd07cd9ebffa68b9030f91553f1f198595439cf53?apiKey=e0e370d878974b25a6e3d058316b06d7&width=800 800w, https://cdn.builder.io/api/v1/image/assets/TEMP/1c73736a4b2b89d3949a024bd07cd9ebffa68b9030f91553f1f198595439cf53?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1200 1200w, https://cdn.builder.io/api/v1/image/assets/TEMP/1c73736a4b2b89d3949a024bd07cd9ebffa68b9030f91553f1f198595439cf53?apiKey=e0e370d878974b25a6e3d058316b06d7&width=1600 1600w, https://cdn.builder.io/api/v1/image/assets/TEMP/1c73736a4b2b89d3949a024bd07cd9ebffa68b9030f91553f1f198595439cf53?apiKey=e0e370d878974b25a6e3d058316b06d7&width=2000 2000w, https://cdn.builder.io/api/v1/image/assets/TEMP/1c73736a4b2b89d3949a024bd07cd9ebffa68b9030f91553f1f198595439cf53?apiKey=e0e370d878974b25a6e3d058316b06d7&"
