--- a/islandwood.html
+++ b/islandwood.html
@@ -1,3 +1,6 @@
+<head>
+  <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100;300;400&display=swap" rel="stylesheet">
+</head>
 <div style="width: 1728px; height: 17627px; position: relative; background: white; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)">
   <img style="width: 1728px; height: 670px; left: 0px; top: 0px; position: absolute" src="https://via.placeholder.com/1728x670" />
   <div style="width: 1728px; height: 670px; left: 0px; top: 0px; position: absolute">
