working on safechat html

--- a/safechat.html
+++ b/safechat.html
@@ -5,7 +5,7 @@
   <div class="div-2">
     <img
       loading="lazy"
-      srcset="https://via.placeholder.com/1728x670"
+      src="images/safechatnavbar.png"
       class="img"
     />
     <div class="div-3">
@@ -32,8 +32,34 @@
     </div>
     <div class="column-2">
       <div class="safechat" style="margin: 0 0 30px 0; font-weight: 900">SafeChat</div>
-      <span style="color: black; font-size: 24px; font-family: Epilogue; font-weight: 600; line-height: 50px; word-wrap: break-word">Where support meets convenience, one chat at a time.</span>
-      <span style="color: black; font-size: 24px; font-family: Epilogue; font-weight: 400; line-height: 50px; word-wrap: break-word"> SafeChat is a mobile app tailored to cater to the specific mental health needs of University of Washington students. It's a platform that's designed to bridge the gap between readily accessible, on-demand mental health support and the unique challenges faced by college students.</span>
+      <span class="bold-text">Where support meets convenience, one chat at a time.</span>
+      <span class="text"> SafeChat is a mobile app tailored to cater to the specific mental health needs of University of Washington students. It's a platform that's designed to bridge the gap between readily accessible, on-demand mental health support and the unique challenges faced by college students.</span>
+      <div class="subtitle">USER RESEARCH</div>
+      <div class="text">Our research delved into the hurdles university students encounter when seeking mental health resources. Through in-depth user interviews, we discovered prevalent issues:</div>
+      <div class="text">
+        <ul>
+          <li>
+            Lack of awareness about available resources
+          </li>
+          <li>
+            Accessibility barriers including cost and availability
+          </li>
+          <li>
+            A preference for indirect communication channels
+          </li>
+          <li>
+            Skepticism toward AI-based mental health support
+          </li>
+        </ul>
+      </div>
+      <div class="subtitle">USER PERSONAS</div>
+      <div>
+        <span class="text">Meet </span>
+        <span class="text" style="color: #1565C0">Erica</span><span class="text">, a 31-year-old graduate student in Applied Math, and </span>
+        <span class="text" style="color: #1565C0">Mike</span><span class="text">, a 20-year-old sophomore studying Human Centered Design & Engineering. </span>
+        <span class="text" style="color: #1565C0">Erica</span><span class="text"> seeks immediate, affordable support, while </span>
+        <span class="text" style="color: #1565C0">Mike</span><span class="text"> prefers human-centric approaches at a lower cost. SafeChat aims to cater to these varying needs by offering an adaptable platform that integrates intuitive features for both users.</span>
+      </div>
     </div>
   </div>
 </div>
@@ -144,7 +170,7 @@
     margin-top: 0;
     float: left;
   }
-  div {
+  div, span {
     font-family: Epilogue, sans-serif;
   }
   .label {
@@ -153,5 +179,36 @@
   }
   .contents {
     margin-bottom: 50px;
+  }
+  span {
+    font-size: 24px;
+  }
+  .bold-text {
+    font-weight: 700;
+    line-height: 40px;
+    word-wrap: break-word;
+  }
+  .text {
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 40px;
+    word-wrap: break-word;
+  }
+  .subtitle {
+    color: #1565C0;
+    font-size: 27px;
+    font-weight: 500;
+    line-height: 50px;
+    word-wrap: break-word;
+    margin: 30px 0 10px 0;
+  }
+  ul {
+    margin-left: 40px;
+    margin-top: 10px;
+  }
+  .img {
+    width: 1728px;
+    height: 670px;
+
   }
 </style>
